add some HTML for the exercise

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Its me, JY</title>
   </head>
   <body>
-
+    <h1>Hello, Code School!</h1>
+    <p>Things to learn:<p>
+    <ul>
+      <li>Javascript</li>
+      <li>Angular (more js)</li>
+      <li>Node (even more js)</li>
+      <li>CSS</li>
+      <li>HTML5</li>
+    </ul>
   </body>
 </html>
